Adding "up next" to webMD and Beauty Cures section

--- a/emoji-libs-port.html
+++ b/emoji-libs-port.html
@@ -59,6 +59,21 @@
     <p class="charcol des"><br>This section will be a "lessons learned" from coding my first website and how knowing code has made me a better designer. </br>I am still slugging it out with the code for this part of my portfolio, but please feel free to check out the real website anytime. <br>It's already live. Just click the pic below:</br></p>
 </div>
     <a href="https://jcdaviesauthor.github.io/FEWD37/final-project/index.html"><img id="emoji" alt="Emoji-Libs Website" src="myimages/emoji-libs.png"></a>
+
+<!-- BOTTOM ARROW TO NEXT PORTFOLIO -->
+    <div class="portArrowBottomSec processSectionTitleUpNext processSectionTitleUpNextWeb">
+      <div class="col-xs-12 col-sm-2 col-md-5 col-lg-6">Up Next</div>
+      <!-- col-sm-5 -->
+      <div class="col-xs-12 col-sm-10 col-md-offset-1 col-md-6 col-lg-offset-1 col-lg-5">
+        <!-- col-sm-offset-1 col-sm-6  -->
+        <a class="nextportRight" href="emoji-libs-port.html">
+          <p class="nextPort arrowAndText ">Tier 5</p>
+          <img class="arrowPort arrowAndText" alt="Connect Icon" src="myimages/arrow-port.png">
+        </a>
+      </div>
+    </div>
+    <!-- Content div -->
+
     <!-- content -->
 </div>
 
