--- a/beauty.html
+++ b/beauty.html
@@ -53,13 +53,27 @@
     </div>
 
 <div id="content">
-    <h2 class="octoGreen changeBack">Hi Beautful! Welcome to Beauty Cures, <br>aka Epicurious for Your Face</br></h2>
+    <h2 class="octoGreen changeBack">Hi Beautiful! Welcome to Beauty Cures, <br>aka Epicurious for Your Face</br></h2>
     <div class="comingSoon">
 
       <p class="charcol des"> I am currently busy chipping away at the code for  my magnum opus design portfolio. <br>Meanwhile, please enjoy a nice relaxing at-home spa moment... </br>which you can experience for yourself as soon as I finish this portfolio!</p>
     </div>
 
     <img id="spaMask" alt="spa mask" src="myimages/beauty.jpg">
+
+    <!-- BOTTOM ARROW TO NEXT PORTFOLIO -->
+          <div class="portArrowBottomSec processSectionTitleUpNext processSectionTitleUpNextWeb">
+            <div class="col-xs-12 col-sm-2 col-md-5 col-lg-6">Up Next</div>
+            <!-- col-sm-5 -->
+            <div class="col-xs-12 col-sm-10 col-md-offset-1 col-md-6 col-lg-offset-1 col-lg-5">
+              <!-- col-sm-offset-1 col-sm-6  -->
+              <a class="nextportRight" href="emoji-libs-port.html">
+                <p class="nextPort arrowAndText ">Emoji Libs</p>
+                <img class="arrowPort arrowAndText" alt="Connect Icon" src="myimages/arrow-port.png">
+              </a>
+            </div>
+          </div>
+<!-- Content div -->
 </div>
 
 <div id="footer">
@@ -72,7 +86,7 @@
           <a class="footerLogos" href="https://www.linkedin.com/in/jessica-davies-cfa-46009b13"><img class="footerLogos" alt="Linked in Logo" src="myimages/home/linked-in.png"></a>
           <a class="footerLogos" href="https://github.com/jcdaviesauthor"><img class="footerLogos" alt="Git Hub Logo" src="myimages/home/git.png"></a>
           </div>
-          <div class="col-xs-12 col-sm-offset-1 col-sm-6 col-md-offset-1 col-md-5 liRight">
+          <div class="col-xs-12 col-sm-offset-1 col-sm-6 col-md-offset-1 col-md-5">
             <!-- class="footerDivs liRight" -->
             <!-- class="col-xs-12 col-sm-offset-1 col-sm-6 col-md-offset-1 col-md-5 col-lg-offset-1" -->
           <div >Web design, content, and code&nbsp;<img id="crImg"alt="Copyright Symbol" src="myimages/home/copyright.png">&nbsp;2016 Jessica Davies.</div>
