--- a/tier5.html
+++ b/tier5.html
@@ -1027,7 +1027,7 @@ old code
   </div>
 
 <!-- NEXT PORTFOLIO SECTION -->
-<div class="portArrowBottomSec processSectionTitleUpNext">
+<div class="processSectionTitleUpNextTier processSectionTitleUpNext">
   <div class="col-xs-12 col-sm-4 col-md-5 col-lg-6 ">Up Next</div>
   <!-- col-sm-5 -->
   <div class="col-xs-12 col-sm-8 col-md-offset-1 col-md-6 col-lg-offset-1 col-lg-5">
