--- a/webmd.html
+++ b/webmd.html
@@ -66,12 +66,12 @@
 
 <!-- BOTTOM ARROW TO NEXT PORTFOLIO -->
       <div class="portArrowBottomSec processSectionTitleUpNext processSectionTitleUpNextWeb">
-        <div class="col-xs-12 col-sm-4 col-md-5 col-lg-6 ">Up Next</div>
+        <div class="col-xs-12 col-sm-2 col-md-5 col-lg-6">Up Next</div>
         <!-- col-sm-5 -->
-        <div class="col-xs-12 col-sm-8 col-md-offset-1 col-md-6 col-lg-offset-1 col-lg-5">
+        <div class="col-xs-12 col-sm-10 col-md-offset-1 col-md-6 col-lg-offset-1 col-lg-5">
           <!-- col-sm-offset-1 col-sm-6  -->
-          <a href="beauty.html">
-            <p class="nextPort arrowAndText">Beauty Cures</p>
+          <a class="nextportRight" href="beauty.html">
+            <p class="nextPort arrowAndText ">Beauty Cures</p>
             <img class="arrowPort arrowAndText" alt="Connect Icon" src="myimages/arrow-port.png">
           </a>
         </div>
@@ -86,10 +86,11 @@
           <div class="col-xs-12 col-sm-5 col-md-6">
             <!-- class="footerDivs"> -->
             <!-- class="col-xs-12 col-sm-5 col-md-6" -->
-          <a href="mailto:thejessicadavies@gmail.com?subject=Portfolio: Jessica Davies &body=Hi Jessica loved your Portfolio!">thejessicadavies@gmail.com</a>
+          <a class="footerLogos" href="mailto:thejessicadavies@gmail.com?subject=Portfolio: Jessica Davies &body=Hi Jessica loved your Portfolio!">thejessicadavies@gmail.com</a>
           <a class="footerLogos" href="https://www.linkedin.com/in/jessica-davies-cfa-46009b13"><img class="footerLogos" alt="Linked in Logo" src="myimages/home/linked-in.png"></a>
           <a class="footerLogos" href="https://github.com/jcdaviesauthor"><img class="footerLogos" alt="Git Hub Logo" src="myimages/home/git.png"></a>
           </div>
+
           <div class="col-xs-12 col-sm-offset-1 col-sm-6 col-md-offset-1 col-md-5 liRight">
             <!-- class="footerDivs liRight" -->
             <!-- class="col-xs-12 col-sm-offset-1 col-sm-6 col-md-offset-1 col-md-5 col-lg-offset-1" -->
@@ -97,9 +98,8 @@
           </div>
         </ul>
   </footer>
-    <!-- footer div -->
 </div>
-<!-- wrapper div -->
+    <!-- footer div -->
 </div>
 
       <script src="http://code.jquery.com/jquery-2.2.0.min.js"></script>
