Adding logo and next steps sections so Tier5 portfolio

--- a/tier5.html
+++ b/tier5.html
@@ -230,22 +230,22 @@ old code
       <!-- STRENGTHS -->
       <tr class="compTableLines">
         <td class="leftSideTitles">Strengths</td>
-        <td class="compTableText heavyText">
+        <td class="compTableText heavyText weakColor ">
           <ul>
             <li>Fresh on-demand lead generation</li>
             <li>Correct contact details</li>
           </ul>
         </td>
-        <td class="compTableText heavyText">
+        <td class="compTableText heavyText weakColor ">
           <ul>
             <li>Easy search function</li>
             <li>Nurturing news &amp info</li>
             <li>Alerts</li>
           </ul>
         </td>
-        <td class="compTableText heavyText"><ul><li>Offers info on targets use of competitive technologies</li></ul></td>
-        <td class="compTableText heavyText"><ul><li>Includes Hoover's/Dun &amp BradStreet data</li></ul></td>
-        <td class="compTableText heavyText">
+        <td class="compTableText heavyText weakColor "><ul><li>Offers info on targets use of competitive technologies</li></ul></td>
+        <td class="compTableText heavyText weakColor "><ul><li>Includes Hoover's/Dun &amp BradStreet data</li></ul></td>
+        <td class="compTableText heavyText weakColor ">
           <ul>
             <li>View co-workers connections</li>
             <li>Claims most accurate contact information</li>
@@ -292,27 +292,27 @@ old code
       <!--COST per month -->
       <tr class="compTableLines">
         <td class="leftSideTitles weakLineTop">Price/mo</td>
-        <td class="compTableText heavyText weakLine">
+        <td class="compTableText heavyText weakLine weakColor ">
           <ul class="cost">
             <li>$200-300</li>
           </ul>
         </td>
-        <td class="compTableText heavyText weakLine">
+        <td class="compTableText heavyText weakLine weakColor ">
           <ul class="cost">
             <li>$60</li>
           </ul>
         </td>
-        <td class="compTableText heavyText weakLine">
+        <td class="compTableText heavyText weakLine weakColor ">
           <ul class="cost">
             <li>$600</li>
           </ul>
         </td>
-        <td class="compTableText heavyText weakLine">
+        <td class="compTableText heavyText weakLine weakColor ">
           <ul class="cost">
             <li>$125-165</li>
           </ul>
         </td>
-        <td class="compTableText heavyText weakLine">
+        <td class="compTableText heavyText weakLine weakColor ">
           <ul class="cost">
             <li>$99 (5 lic)</li>
           </ul>
@@ -322,27 +322,27 @@ old code
       <!--COST PER LEAD -->
       <tr class="compTableLines">
         <td class="leftSideTitles">Price/lead</td>
-        <td class="compTableText heavyText weakColor">
+        <td class="compTableText heavyText weakColor costPerLead">
           <ul class="cost">
             <li>$0.35-0.66</li>
-          </ul class="cost">
+          </ul>
         </td>
-        <td class="compTableText heavyText weakColor">
+        <td class="compTableText heavyText weakColor costPerLead">
           <ul class="cost">
             <li>$1.25</li>
           </ul>
         </td>
-        <td class="compTableText heavyText weakColor">
+        <td class="compTableText heavyText weakColor costPerLead">
           <ul class="cost">
             <li>N/A</li>
           </ul>
         </td>
-        <td class="compTableText heavyText weakColor">
+        <td class="compTableText heavyText weakColor costPerLead">
           <ul class="cost">
             <li>$0.41-0.50</li>
           </ul>
         </td>
-        <td class="compTableText heavyText weakColor">
+        <td class="compTableText heavyText weakColor costPerLead">
           <ul class="cost">
             <li>$0.99</li>
           </ul>
@@ -1014,17 +1014,94 @@ old code
 
 <div class="comparisons">
   <div class="listView">
-        <p class="comparisonTitle">Former List View</p>
+        <p class="comparisonTitle formerList">Former Lead List</p>
         <img class="listViewImg" alt="Old List View" src="myimages/tier5/build/former-list-view2.png">
   </div>
 
-
   <div class="listView">
-      <p class="comparisonTitle comparisonTitle2">Current List View</p>
+      <p class="comparisonTitle comparisonTitle2">Current Lead List</p>
       <img class="listViewImg" alt="New List View" src="myimages/tier5/build/new-list-view.png">
   </div>
 
   </div>
+
+  <div class="comparisons">
+    <div class="listView">
+          <p class="comparisonTitle formerFilter">Former Target Market Filter</p>
+          <img class="listViewImg" alt="Old List View" src="myimages/tier5/build/filter1.png">
+    </div>
+
+    <div class="listView">
+        <p class="comparisonTitle filter">New Target Market Filter</p>
+        <img class="listViewImg" alt="New List View" src="myimages/tier5/build/filter2.png">
+    </div>
+
+    </div>
+
+  <div><p class="statement statmentOrange">Our final interactive prototype.</div>
+
+<div class="prototypeLink">
+  Click <a  href="https://invis.io/GM3VZTGAD">here</a> to see prototype.</div>
+
+<div class="statement">Tier 5 logo redesign with user feedback.</div>
+
+
+
+<div class="logoSecParent">
+
+  <div class="logoSec">
+    <div class="logoWithText">
+      <p class="logoTitle">Former Logos</p>
+      <img class="octoLogo" alt="Old Octopus Logo" src="myimages/tier5/build/old-octo.png">
+      <p>Flower? Ameba? Octopus?</p>
+    </div>
+
+    <div class="logoWithText">
+      <p class="logoTitle">New Logos</p>
+      <img class="octoLogoNew" alt="New Octopus Logo" src="myimages/tier5/build/octo-happy.png">
+      <p>Happy Octopus</p>
+    </div>
+  </div>
+
+  <div class="logoSec">
+    <div class="logoWithText">
+
+      <div class="logoSec">
+        <img class="octoLogo" alt="Old Octopus Logo with Eyes" src="myimages/tier5/build/old-octo-eyes.png">
+        <p>Scarey, Ghostly, Weird</p>
+      </div>
+    </div>
+
+    <div class="logoWithText">
+      <img class="octoLogoNew2" alt="Old Octopus Logo with Eyes" src="myimages/tier5/introduction/tier5-hula-left.png">
+      <p>Fun, Fresh, Youthful</p>
+      </div>
+
+    </div>
+    <!-- logo parent -->
+  </div>
+
+<!-- NEXT STEPS -->
+<div class="arrowContainer">
+
+  <img class="nextStepsArrow" alt="Arrow with Next Steps" src="myimages/tier5/build/next-steps-arrow.png">
+</div>
+
+<div class="stepsParent">
+  <div class="stepsSec">
+    <div class="rec">Outbound UI &amp More Feedback</div>
+  </div>
+
+  <div class="stepsSec">
+    <div class="rec">NewsFeed &amp Profile</div>
+  </div>
+
+  <div class="stepsSec">
+    <div class="rec">Indivudal Search</div>
+
+  </div>
+
+</div>
 
 <!-- NEXT PORTFOLIO SECTION -->
 <div class="processSectionTitleUpNextTier processSectionTitleUpNext">
@@ -1038,7 +1115,6 @@ old code
     </a>
   </div>
 </div>
-<div>
 
 <!-- content div -->
 </div>
