--- a/beauty.html
+++ b/beauty.html
@@ -68,7 +68,7 @@
             <div class="col-xs-12 col-sm-10 col-md-offset-1 col-md-6 col-lg-offset-1 col-lg-5">
               <!-- col-sm-offset-1 col-sm-6  -->
               <a class="nextportRight" href="emoji-libs-port.html">
-                <p class="nextPort arrowAndText ">Emoji Libs</p>
+                <p class="nextPort arrowAndText ">Emoji-Libs Original Website</p>
                 <img class="arrowPort arrowAndText" alt="Connect Icon" src="myimages/arrow-port.png">
               </a>
             </div>
