--- a/emoji-libs-port.html
+++ b/emoji-libs-port.html
@@ -56,7 +56,7 @@
 <div id="content">
     <h2 class="octoGreen changeBack">Welcome to Emoji Libs!<br>A website created to help people learn how to use emojis</br></h2>
     <div class="comingSoon">
-    <p class="charcol des"><br>This section will be a "lessons learned" from coding my first website and how knowing code has made me a better designer. </br>I am still slugging it out with the code for this part of my portfolio, but please feel free to check out the real website anytime. <br>It's already live. Just click the pic below:</br></p>
+    <p class="charcol des"><br>This section will be a "lessons learned" from coding my first website and how code has made me a better designer. I am still slugging it out with the code for this part of my portfolio, but please feel free to check out the real website anytime.<br><b>It's already live. Just click the pic below:</b></br></p>
 </div>
     <a href="https://jcdaviesauthor.github.io/FEWD37/final-project/index.html"><img id="emoji" alt="Emoji-Libs Website" src="myimages/emoji-libs.png"></a>
 
@@ -66,7 +66,7 @@
       <!-- col-sm-5 -->
       <div class="col-xs-12 col-sm-10 col-md-offset-1 col-md-6 col-lg-offset-1 col-lg-5">
         <!-- col-sm-offset-1 col-sm-6  -->
-        <a class="nextportRight" href="emoji-libs-port.html">
+        <a class="nextportRight" href="tier5.html">
           <p class="nextPort arrowAndText ">Tier 5</p>
           <img class="arrowPort arrowAndText" alt="Connect Icon" src="myimages/arrow-port.png">
         </a>
