--- a/tier5.html
+++ b/tier5.html
@@ -1038,14 +1038,12 @@ old code
 
     </div>
 
-  <div><p class="statement statmentOrange">Our final interactive prototype.</div>
+  <div><p class="statement statmentOrange">Our interactive prototype.</div>
 
 <div class="prototypeLink">
   Click <a  href="https://invis.io/GM3VZTGAD">here</a> to see prototype.</div>
 
 <div class="statement">Tier 5 logo redesign with user feedback.</div>
-
-
 
 <div class="logoSecParent">
 
@@ -1090,14 +1088,26 @@ old code
 <div class="stepsParent">
   <div class="stepsSec">
     <div class="rec">Outbound UI &amp More Feedback</div>
+    <div class="phase">P1</div>
+    <div class="phase">
+
+    </div>
   </div>
 
   <div class="stepsSec">
-    <div class="rec">NewsFeed &amp Profile</div>
+    <div class="rec">Newsfeed &amp Profile</div>
+    <div class="phase">P2</div>
+    <div class="phaseText">
+
+    </div>
   </div>
 
   <div class="stepsSec">
     <div class="rec">Indivudal Search</div>
+    <div class="phase">P3</div>
+    <div class="phaseText">
+
+    </div>
 
   </div>
 
