Footer fix for temp files

--- a/webmd.html
+++ b/webmd.html
@@ -11,10 +11,11 @@
 
     <link  rel="stylesheet" href="all-files.css" media="screen" charset="utf-8">
     <link  rel="stylesheet" href="nav.css" media="screen" charset="utf-8">
-    <link  rel="stylesheet" href="footer.css" media="screen" charset="utf-8">
+
     <link  rel="stylesheet" href="project.css" media="screen" charset="utf-8">
       <link  rel="stylesheet" href="temp-file.css" media="screen" charset="utf-8">
     <link  rel="stylesheet" href="webmd.css" media="screen" charset="utf-8">
+    <link  rel="stylesheet" href="footer.css" media="screen" charset="utf-8">
   </head>
 <body>
 <div id='wrapper'>
@@ -62,7 +63,7 @@
     </div>
 
     <img id="catburrito" alt="cat burrito" src="myimages/cat-burrito.jpg">
-      <a href="https://c1.staticflickr.com/3/2389/2073509907_345ad52bc1.jpg">Source</a>
+      <a class="source" href="https://c1.staticflickr.com/3/2389/2073509907_345ad52bc1.jpg">Source</a>
 
 <!-- BOTTOM ARROW TO NEXT PORTFOLIO -->
       <div class="portArrowBottomSec processSectionTitleUpNext processSectionTitleUpNextWeb">
