--- a/webmd.html
+++ b/webmd.html
@@ -13,8 +13,8 @@
     <link  rel="stylesheet" href="nav.css" media="screen" charset="utf-8">
 
     <link  rel="stylesheet" href="project.css" media="screen" charset="utf-8">
-      <link  rel="stylesheet" href="temp-file.css" media="screen" charset="utf-8">
     <link  rel="stylesheet" href="webmd.css" media="screen" charset="utf-8">
+      <link  rel="stylesheet" href="temp-file.css" media="screen" charset="utf-8">
     <link  rel="stylesheet" href="footer.css" media="screen" charset="utf-8">
   </head>
 <body>
@@ -67,9 +67,9 @@
 
 <!-- BOTTOM ARROW TO NEXT PORTFOLIO -->
       <div class="portArrowBottomSec processSectionTitleUpNext processSectionTitleUpNextWeb">
-        <div class="col-xs-12 col-sm-2 col-md-5 col-lg-6">Up Next</div>
+        <div class="col-xs-12 col-sm-3 col-md-4 col-lg-6">Up Next</div>
         <!-- col-sm-5 -->
-        <div class="col-xs-12 col-sm-10 col-md-offset-1 col-md-6 col-lg-offset-1 col-lg-5">
+        <div class="col-xs-12 col-sm-8 col-md-offset-1 col-md-6 col-lg-offset-1 col-lg-5 text-right floatLeft">
           <!-- col-sm-offset-1 col-sm-6  -->
           <a class="nextportRight" href="beauty.html">
             <p class="nextPort arrowAndText ">Beauty Cures Native App</p>
