Adding Next Steps

--- a/tier5.html
+++ b/tier5.html
@@ -580,11 +580,11 @@ old code
 
   <p class="statement">Our personas detail the two main types of salespeople</p>
 
-<div class="row">
+<div class="row personaParent text-center">
   <!-- Ajay -->
-<table class="col-md-6">
+<table class="col-md-6 text-center">
     <caption class="personaTypes text-center"> High Volume, Low Touch</caption>
-  <tbody>
+  <tbody class="text-center">
   <tr>
       <td class="ajayTd">
           <img class="ajay" alt="Picture of a Man" src="myimages/tier5/synthesis/ajay.png">
@@ -631,9 +631,9 @@ old code
 </table>
 
 <!-- Brad -->
-<table class="col-md-6" cellspacing="10">
+<table class="col-md-6 text-center" cellspacing="10">
     <caption class="personaTypes text-center"> High Touch, Low Volume</caption>
-  <tbody>
+  <tbody class="text-center">
   <tr>
       <td class="bradTd">
         <img class="brad" alt="Picture of a Man" src="myimages/tier5/synthesis/brad.png">
@@ -648,7 +648,7 @@ old code
       </td>
 
       <td class="textBoxQuote textBoxQuoteBrad padding">
-    <p class="quoteP">&#34;There is no good way to keep appraised of news on your leads.&#34;
+    <p class="quoteP">&#34;There is no good way to keep apprised of news on your leads.&#34;
       </td>
 
   </tr>
@@ -695,7 +695,7 @@ old code
     We found that the saleperson&#39;s problem is two fold:
   </p>
     <p> 1 Quickly finding targeted leads with correct contact details</p>
-    <p> 2 Difficult to find new and information to help nurture prospects</p>
+    <p> 2 Difficult to find news and information to help "nurture" prospects</p>
 </div>
 
 <p class="alignGoalsTitle OctoGreen">We Considered both User &amp Business Goals
@@ -957,13 +957,12 @@ old code
 
 <div class="designDecisions">
 
-  <div class="decNumbers">
-      <div class="decCircle decCircle1"><p class="decNumber">1</p></div>
-      <div class="decCircle decCircle2"><p class="decNumber">2</p></div>
-      <div class="decCircle decCircle3"><p class="decNumber decNumber3">3</p></div>
-  </div>
+  <!-- <div class="decNumbers">
+
+  </div> -->
 
   <div class="decSections">
+    <div class="decCircle decCircle1"><p class="decNumber">1</p></div>
     <div class="decText">
       <div class="decPoints"><p>Give the salesperson more control over their lead list.</</p></div>
 
@@ -978,6 +977,7 @@ old code
     </div>
 
     <div class="decText">
+      <div class="decCircle decCircle2"><p class="decNumber">2</p></div>
       <div class="decPoints">
         <p>Keep the UI fun, fresh and young.</p>
       </div>
@@ -995,6 +995,7 @@ old code
     </div>
 
     <div class="decText">
+      <div class="decCircle decCircle3"><p class="decNumber decNumber3">3</p></div>
       <div class="decPoints"><p>The ever-moving NAV.</div>
         <div class="approachSubPoints heavyText"><p>We tested 5+ different versions of the NAV and the list components, but finally found a combination that most people found to be clear and easy to use.</p></div>
       </div>
@@ -1087,30 +1088,35 @@ old code
 
 <div class="stepsParent">
   <div class="stepsSec">
-    <div class="rec">Outbound UI &amp More Feedback</div>
+    <div class="recTop">Outbound UI &amp More Feedback</div>
     <div class="phase">P1</div>
-    <div class="phase">
-
+    <div class="phaseText">
+      <p>- More testing, 1-2 rounds to refine design</p>
+      <p>- Give your clients more control of lists (reject, re-filter, etc.)</p>
+      <p>- Implement on-boarding process, eliminating intensive sign-up process</p>
+      <p>- Implement feedback process, your clients do the work to educate your algorithm</p>
     </div>
   </div>
 
   <div class="stepsSec">
-    <div class="rec">Newsfeed &amp Profile</div>
+    <div class="recTop">Newsfeed &amp Profile</div>
     <div class="phase">P2</div>
     <div class="phaseText">
-
+      <p>- Develop company and personal news feed for each lead</p>
+      <p>- Continue to develop new data points for better nurturing </p>
+      <p>- Develop alerts for changes in news and profile information.</p>
     </div>
   </div>
 
   <div class="stepsSec">
-    <div class="rec">Indivudal Search</div>
+    <div class="recTop">Individual Search</div>
     <div class="phase">P3</div>
     <div class="phaseText">
-
+      <p>-Consider how you might charge extra for individual search</p>
+      <p>-Implement individual search</p>
     </div>
-
   </div>
-
+<!-- steps parent -->
 </div>
 
 <!-- NEXT PORTFOLIO SECTION -->
