Fixing feature section wrap

--- a/tier5.html
+++ b/tier5.html
@@ -743,32 +743,32 @@ old code
 </div>
 
   <div class="statement featureMargins">Initial concept &amp features</div>
-<div class="features row">
-  <div class="realTimeAndNur2 col-xs-offset-1 col-xs-11 col-sm-offset-0 col-sm-6 col-lg-offset-1 col-lg-5 realTime">
+<div class="featuresList row">
+  <div class="realTimeAndNur2 col-xs-offset-1 col-xs-11 col-sm-offset-0 col-sm-6 col-md-offset-1 col-md-5 realTime">
         <p class="experienceTitle">Real-Time Connections</p>
-        <div class="iconSentence">
-          <img class="featureIcon" alt="Funnel Icon" src="myimages/tier5/design/funnel-icon.png">
-          <p class="experienceSentence2">Quick, easy-to-use filters to target leads</p>
+        <div class="iconSentence ">
+          <img class="featureIcon " alt="Funnel Icon" src="myimages/tier5/design/funnel-icon.png">
+          <p class="experienceSentence2 ">Quick, easy-to-use filters to target leads</p>
         </div>
-        <div class="iconSentence">
+        <div class="iconSentence ">
           <img class="featureIcon" alt="Sort Icon" src="myimages/tier5/design/sort-icon.png">
-          <p class="experienceSentence2">Sorting capabilities to review list</p>
+          <p class="experienceSentence2  ">Sorting capabilities to review list</p>
         </div>
-        <div class="iconSentence">
-          <img class="featureIcon" alt="US Map Icon" src="myimages/tier5/design/us-icon.png">
-          <p class="experienceSentence2">Analytics/overview to size-up lead list</p>
+        <div class="iconSentence ">
+          <img class="featureIcon " alt="US Map Icon" src="myimages/tier5/design/us-icon.png">
+          <p class="experienceSentence2 ">Analytics/overview to size-up lead list</p>
         </div>
-        <div class="iconSentence">
-          <img class="featureIcon" alt="Eye Icon" src="myimages/tier5/design/eye-icon.png">
-          <p class="experienceSentence2">Multiple views, fits any preference</p>
+        <div class="iconSentence ">
+          <img class="featureIcon " alt="Eye Icon" src="myimages/tier5/design/eye-icon.png">
+          <p class="experienceSentence2 ">Multiple views, fits any preference</p>
         </div>
-        <div class="iconSentence">
-          <img class="featureIcon flagIcon" alt="Flag Icon" src="myimages/tier5/design/flag-icon.png">
+        <div class="iconSentence ">
+          <img class="featureIcon  flagIcon" alt="Flag Icon" src="myimages/tier5/design/flag-icon.png">
           <p class="experienceSentence2">Leave feedback to improve lead quality</p>
         </div>
       </div>
 
-  <div class="realTimeAndNur2 col-xs-offset-1 col-xs-11 col-sm-offset-0 col-sm-6  col-lg-offset-1 col-lg-5 ">
+  <div class="realTimeAndNur2 col-xs-offset-1 col-xs-11 col-sm-offset-0 col-sm-6  col-md-offset-1 col-md-5 ">
     <div class="nurtureValign">
             <p class="experienceTitle">Nurturing Connections</p>
             <div class="iconInline">
@@ -1088,7 +1088,7 @@ old code
 
 <div class="stepsParent">
   <div class="stepsSec">
-    <div class="recTop">Outbound UI &amp More Feedback</div>
+    <div class="recTop">Outbound UI &amp Feedback</div>
     <div class="phase">P1</div>
     <div class="phaseText">
       <p>- More testing, 1-2 rounds to refine design</p>
