updating format next steps and test findings

--- a/tier5.html
+++ b/tier5.html
@@ -580,9 +580,9 @@ old code
 
   <p class="statement">Our personas detail the two main types of salespeople</p>
 
-<div class="row personaParent text-center">
+<div class="row personaParent">
   <!-- Ajay -->
-<table class="col-md-6 text-center">
+<table class="col-md-6">
     <caption class="personaTypes text-center"> High Volume, Low Touch</caption>
   <tbody class="text-center">
   <tr>
@@ -593,7 +593,7 @@ old code
       <td class="textBoxName ajayName padding">
         <p class="SalesmanName boxTitles">Ajay</p>
         <p>Age: 26</p>
-        <p>Location: New York City, NY</p>
+        <p>Location: New York, NY</p>
         <p>Marital Status: Single</p>
         <p>Occupation: Sales Hacker</p>
       </td>
@@ -614,9 +614,8 @@ old code
     <td class="textBoxFrustrations padding">
         <p class="boxTitles">Frustrations</p>
         <p>- 50% of day spent prospecting</p>
-        <p>- Relies on email marketing,
-        only 5% response rate</p>
-        <p>- Overseas fact checkers slow</p>
+        <p>- Relies on email marketing, 5% response rate</p>
+        <p>- Uses overseas fact checkers, very slow</p>
     </td>
     <td class="textBoxTech padding">
       <p class="boxTitles">Technology</p>
@@ -664,8 +663,8 @@ old code
     <td class="textBoxFrustrations padding">
         <p class="boxTitles">Frustrations</p>
         <p>- Limited bandwidth</p>
-        <p>- Long time to execute sale</p>
-        <p>- 3 to 5+ tools required to find lead</p>
+        <p>- Takes a long time to execute a sale</p>
+        <p>- 3 to 5+ tools required to find a lead</p>
         <p>- Finding "nurture" info</p>
     </td>
     <td class="textBoxTech padding">
@@ -680,12 +679,11 @@ old code
   </tbody>
 </table>
 </div>
-
-    <img class="userBracket" alt="Downward facing bracket" src="myimages/tier5/synthesis/bracket.png">
-
-
-      <p class="userFlowTitle">Ajay&#39;s User Flow</p>
-      <div class="userFlow">
+    <div class="bracketDiv">
+        <img class="userBracket" alt="Downward facing bracket" src="myimages/tier5/synthesis/bracket.png">
+        <p class="userFlowTitle">Ajay&#39;s User Flow</p>
+    </div>
+    <div class="userFlow">
       <img class="userFlowImg" alt="Downward facing bracket" src="myimages/tier5/synthesis/user-flow.png">
     </div>
 
@@ -938,15 +936,15 @@ old code
 </div> -->
 
 <div><p class="statement">Usability test findings</p></div>
-<div class="findings2PParent">
 
-  <div class="findings2P heavyText ">
+<div class="findings2PParent row center-text">
+  <div class="findings2P col-xs-12 col-sm-6 heavyText ">
     <p>
     <b>The usability testing supported our business model recommendations.</b> We saw how our two personas would use the site, but the testing also added another layer of information: many people were also a hybrid of the two. This confirmed our original hypothesis that Tier5 really needed to offer both products (volume leads and individual leads). They cannot flourish on just the volume leads (25% of the market).
     </p>
-    </div>
+  </div>
 
-  <div class="findings2P heavyText">
+  <div class="findings2P col-xs-12 col-sm-6 heavyText">
     <p>
     <b>Regarding our interface design </b> the research indicated more tweaks to visuals rather than any major change to the overall functionality. My partner and I battled over whether to have on-boarding, but the users showed us the way, resulting in a clean, fast, and extremely helpful on-boarding process. People loved our analytics, but it was not totally evident at first glance that they were describing the lead list. This indicated more testing was need on our nav placement.
     </p>
@@ -957,12 +955,8 @@ old code
 
 <div class="designDecisions">
 
-  <!-- <div class="decNumbers">
-
-  </div> -->
-
   <div class="decSections">
-    <div class="decCircle decCircle1"><p class="decNumber">1</p></div>
+    <div class="decCircle"><p class="decNumber">1</p></div>
     <div class="decText">
       <div class="decPoints"><p>Give the salesperson more control over their lead list.</</p></div>
 
@@ -973,34 +967,38 @@ old code
 
       <div class="approachSubPoints heavyText">
         <p>- Created an ability to archive lists so that salespeople could review prior searches and be assure they always received fresh new leads</p></div>
+    </div>
+  </div>
 
+  <div class="decSections">
+
+      <div class="decCircle"><p class="decNumber">2</p></div>
+      <div class="decText">
+        <div class="decPoints">
+          <p>Keep the UI fun, fresh and young.</p>
+        </div>
+
+        <div class="approachSubPoints heavyText">
+          <p>Tier5 is run by Millennials and many of their client come to them for twitter, Klout, and other offerings that help in marketing to Millennials so changing the look, logo and attitude of the UI to match the fresh young organization made good sense.</p>
+        </div>
+
+        <div class="approachSubPoints heavyText">
+          <p>- Recreated landing page to offer a new, fresh, fun perspective and what the salesperson really wants - to work less.</p>
+        </div>
+        <div class="approachSubPoints heavyText">
+          <p>- Completely redesigned/recreated the company logo</p>
+        </div>
+      </div>
     </div>
 
-    <div class="decText">
-      <div class="decCircle decCircle2"><p class="decNumber">2</p></div>
-      <div class="decPoints">
-        <p>Keep the UI fun, fresh and young.</p>
-      </div>
-
-      <div class="approachSubPoints heavyText">
-        <p>Tier5 is run by Millennials and many of their client come to them for twitter, Klout, and other offerings that help in marketing to Millennials so changing the look, logo and attitude of the UI to match the fresh young organization made good sense.</p>
-      </div>
-
-      <div class="approachSubPoints heavyText">
-        <p>- Recreated landing page to offer a new, fresh, fun perspective and what the salesperson really wants - to work less.</p>
-      </div>
-      <div class="approachSubPoints heavyText">
-        <p>- Completely redesigned/recreated the company logo</p>
-      </div>
-    </div>
-
-    <div class="decText">
+  <div class="decSections">
       <div class="decCircle decCircle3"><p class="decNumber decNumber3">3</p></div>
+      <div class="decText">
       <div class="decPoints"><p>The ever-moving NAV.</div>
         <div class="approachSubPoints heavyText"><p>We tested 5+ different versions of the NAV and the list components, but finally found a combination that most people found to be clear and easy to use.</p></div>
       </div>
-  <!-- decSections -->
-</div>
+  </div>
+
 <!-- design decisions -->
 </div>
 
