--- a/tier5.html
+++ b/tier5.html
@@ -104,37 +104,41 @@
 
         <div class= "ourApproachTitle">Our Strategic Approach</div>
 
-        <div class="approach">
-
-          <div class="approachNumbers">
-              <div class="approachCircle approachCircle1"><p class="approachNumber">1</p></div>
-              <div class="approachCircle approachCircle2"><p class="approachNumber">2</p></div>
-              <div class="approachCircle approachCircle3"><p class="approachNumber approachNumber3">3</p></div>
-              <div class="approachCircle approachCircle4"><p class="approachNumber approachNumber4">4</p></div>
-          </div>
+  <div class="approach">
 
           <div class="approachSections">
+            <div class="approachCircle approachCircle1"><p class="approachNumber">1</p></div>
             <div class="approachText">
               <div class="approachPoints"><p>Always Consider the Business Needs &amp Goals</p></div>
               <div class="approachSubPoints"><p>Start with the business first<br>Increase acquisition and retention</br></p></div>
             </div>
+        </div>
 
-            <div class="approachText">
-              <div class="approachPoints"><p>Extensive Competitive Review</p></div>
-              <div class="approachSubPoints"><p>How do salespeople think we stack up to the competition?
-              <br>Do we have the right business model?</br></p></div>
-            </div>
+          <div class="approachSections">
+              <div class="approachCircle approachCircle2"><p class="approachNumber">2</p></div>
+              <div class="approachText">
+                <div class="approachPoints"><p>Extensive Competitive Review</p></div>
+                <div class="approachSubPoints"><p>How do salespeople think we stack up to the competition?
+                <br>Do we have the right business model?</br></p></div>
+              </div>
+          </div>
 
+          <div class="approachSections">
+              <div class="approachCircle approachCircle3"><p class="approachNumber approachNumber3">3</p></div>
             <div class="approachText">
               <div class="approachPoints"><p>In-depth Understanding of the User</p></div>
               <div class="approachSubPoints"><p>Understand how sales people seek and use lead information</p></div>
             </div>
+          </div>
 
+          <div class="approachSections">
+            <div class="approachCircle approachCircle4"><p class="approachNumber approachNumber4">4</p></div>
             <div class="approachText">
               <div class="approachPoints"><p>Redesign UI of Outbound Sales Platform</p></div>
+              <div class="approachSubPoints"><p>Understand what is working and what changes need to be made to meet salesperson's needs.</p></div>
             </div>
           </div>
-        </div>
+  </div>
 
 <!--
 old code
@@ -208,8 +212,8 @@ old code
     </div>
 
       <div><p class="statement statmentOrange">Focus on competing only with lead/data generators.</p></div>
-<div class="table-responsive">
-    <table class="compTable table">
+<div class="table-responsive tableParent">
+    <table class="compTable table table-borderless">
       <tr>
         <th></th>
         <th><img class="tierTableLogo competitorTableLogos" alt="Tier 5 Logo" src="myimages/tier5/strategy/tier5-logo-normal.png"></th>
@@ -705,8 +709,8 @@ old code
 
 <div class="statement statmentOrange">Our solution: two high level experiences</div>
 
-<div class="experiences">
-  <div class="realTimeAndNur">
+<div class="experiences row">
+  <div class="realTimeAndNur col-xs-12 col-sm-6">
     <!-- col-xs-12 col-sm-6 -->
     <img class="pillar" alt="Pillar" src="myimages/tier5/synthesis/pillar.png">
     <div class="experienceText">
@@ -715,7 +719,7 @@ old code
     </div>
   </div>
 
-  <div class="realTimeAndNur">
+  <div class="realTimeAndNur col-xs-12 col-sm-6 ">
     <!-- col-xs-12 col-sm-6 -->
       <img class="pillar" alt="Pillar" src="myimages/tier5/synthesis/pillar.png">
       <div class="experienceText">
@@ -740,17 +744,18 @@ old code
 
 </div>
 
-  <div class="statement featureMargins">Initial concept &amp features</div>
+  <div class="statement featureTitleMargins">Initial concept &amp features</div>
 <div class="featuresList row">
-  <div class="realTimeAndNur2 col-xs-offset-1 col-xs-11 col-sm-offset-0 col-sm-6 col-md-offset-1 col-md-5 realTime">
-        <p class="experienceTitle">Real-Time Connections</p>
-        <div class="iconSentence ">
+  <div class="realTimeAndNur2 col-xs-12 col-sm-6">
+      <!-- <div class="realTimeAndNur2 col-xs-offset-1 col-xs-11 col-sm-offset-0 col-sm-6 col-md-offset-1 col-md-5 realTime"> -->
+        <p class="experienceTitleIcon">Real-Time Connections</p>
+        <div class="iconSentence">
           <img class="featureIcon " alt="Funnel Icon" src="myimages/tier5/design/funnel-icon.png">
-          <p class="experienceSentence2 ">Quick, easy-to-use filters to target leads</p>
+          <p class="experienceSentence2">Quick, easy-to-use filters to target leads</p>
         </div>
-        <div class="iconSentence ">
+        <div class="iconSentence">
           <img class="featureIcon" alt="Sort Icon" src="myimages/tier5/design/sort-icon.png">
-          <p class="experienceSentence2  ">Sorting capabilities to review list</p>
+          <p class="experienceSentence2">Sorting capabilities to review list</p>
         </div>
         <div class="iconSentence ">
           <img class="featureIcon " alt="US Map Icon" src="myimages/tier5/design/us-icon.png">
@@ -766,9 +771,10 @@ old code
         </div>
       </div>
 
-  <div class="realTimeAndNur2 col-xs-offset-1 col-xs-11 col-sm-offset-0 col-sm-6  col-md-offset-1 col-md-5 ">
+  <div class="realTimeAndNur2 col-xs-12 col-sm-6">
+  <!-- <div class="realTimeAndNur2 col-xs-offset-1 col-xs-11 col-sm-offset-0 col-sm-6  col-md-offset-1 col-md-5 "> -->
     <div class="nurtureValign">
-            <p class="experienceTitle">Nurturing Connections</p>
+            <p class="experienceTitleIcon">Nurturing Connections</p>
             <div class="iconInline">
             <img class="featureIcon" alt="RSS Icon" src="myimages/tier5/design/rss-icon.png">
             <p class="experienceSentence2">Newsfeed to keep tabs on lead&#39;s activities</p>
@@ -1037,12 +1043,12 @@ old code
 
     </div>
 
-  <div><p class="statement statmentOrange">Our interactive prototype.</div>
+  <div><p class="statement statmentOrange">Our interactive prototype</div>
 
 <div class="prototypeLink">
   Click <a  href="https://invis.io/GM3VZTGAD">here</a> to see prototype.</div>
 
-<div class="statement">Tier 5 logo redesign with user feedback.</div>
+<div class="statement">Tier 5 logo redesign with user feedback</div>
 
 <div class="logoSecParent">
 
