Fixing Tier5 Hamburger

--- a/tier5.html
+++ b/tier5.html
@@ -26,7 +26,7 @@
             <header>
           <!-- navbar-default is an add in to change color -->
           <nav class="navbar navbar-default"  role="navigation">
-              <div class="container">
+              <div class="containerOcto">
                   <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                           <span class="sr-only">Toggle navigation</span>
@@ -59,10 +59,10 @@
       <div id="content">
         <div id="projectTitleBox" class="titleBackground container">
 <!-- a was div -->
-          <a class= "container image-swap" href="#">
+          <div class= "container image-swap" href="#">
             <img class="projectLogo" class="picone" alt="Tier 5 Octopus Logo" src="myimages/home/tier5-hula-right.png">
             <img class="projectLogo" class="pictwo" alt="Tier 5 Octopus Logo" src="myimages/tier5/introduction/tier5-hula-left.png">
-          </a>
+          </div>
 
             <p class="projectTitleSize" id="projectTitle">Tier5 Outbound Sales Lead Generating Platform</p>
 
