--- a/tier5.html
+++ b/tier5.html
@@ -1087,7 +1087,7 @@ old code
 <!-- NEXT STEPS -->
 <div class="arrowContainer">
 
-  <img class="nextStepsArrow" alt="Arrow with Next Steps" src="myimages/tier5/build/next-steps-arrow.png">
+  <!-- <img class="nextStepsArrow" alt="Arrow with Next Steps" src="myimages/tier5/build/next-steps-arrow.png"> -->
 </div>
 
 <div class="stepsParent">
