Replaced dead arrow

--- a/tier5.html
+++ b/tier5.html
@@ -1085,10 +1085,13 @@ old code
   </div>
 
 <!-- NEXT STEPS -->
-<div class="arrowContainer">
+<!-- <div class="arrowContainer">
 
   <!-- <img class="nextStepsArrow" alt="Arrow with Next Steps" src="myimages/tier5/build/next-steps-arrow.png"> -->
-</div>
+
+<!-- </div> -->
+
+<div class="statement">Next Steps &amp Roll Out Phases</div>
 
 <div class="stepsParent">
   <div class="stepsSec">
