--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
     </div>
     <!-- content div -->
       </div>
-<div class="footer">
+<div id="footer">
 
     <footer>
           <ul id="footerUl" class="row">
