Fix formatting initial concepts and features

--- a/tier5.html
+++ b/tier5.html
@@ -745,8 +745,9 @@ old code
 </div>
 
   <div class="statement featureTitleMargins">Initial concept &amp features</div>
+
 <div class="featuresList row">
-  <div class="realTimeAndNur2 col-xs-12 col-sm-6">
+  <div class="realTimeAndNur2 col-xs-offset-1 col-xs-11 col-sm-offset-1 col-sm-5">
       <!-- <div class="realTimeAndNur2 col-xs-offset-1 col-xs-11 col-sm-offset-0 col-sm-6 col-md-offset-1 col-md-5 realTime"> -->
         <p class="experienceTitleIcon">Real-Time Connections</p>
         <div class="iconSentence">
@@ -766,31 +767,29 @@ old code
           <p class="experienceSentence2 ">Multiple views, fits any preference</p>
         </div>
         <div class="iconSentence ">
-          <img class="featureIcon  flagIcon" alt="Flag Icon" src="myimages/tier5/design/flag-icon.png">
+          <img class="featureIcon flagIcon" alt="Flag Icon" src="myimages/tier5/design/flag-icon.png">
           <p class="experienceSentence2">Leave feedback to improve lead quality</p>
         </div>
-      </div>
+  </div>
 
-  <div class="realTimeAndNur2 col-xs-12 col-sm-6">
+  <div class="realTimeAndNur2  col-xs-offset-1 col-xs-11 col-sm-offset-1 col-sm-5">
   <!-- <div class="realTimeAndNur2 col-xs-offset-1 col-xs-11 col-sm-offset-0 col-sm-6  col-md-offset-1 col-md-5 "> -->
-    <div class="nurtureValign">
             <p class="experienceTitleIcon">Nurturing Connections</p>
-            <div class="iconInline">
+            <div class="iconSentence">
             <img class="featureIcon" alt="RSS Icon" src="myimages/tier5/design/rss-icon.png">
             <p class="experienceSentence2">Newsfeed to keep tabs on lead&#39;s activities</p>
           </div>
-          <div class="iconInline">
+          <div class="iconSentence">
             <img class="featureIcon" alt="Sort Icon" src="myimages/tier5/design/search-icon.png">
             <p class="experienceSentence2">Individual search, find a client&#39;s email now! </p>
           </div>
-          <div class="iconInline">
+          <div class="iconSentence">
             <img class="featureIcon" alt="Connect Icon" src="myimages/tier5/design/connect-icon.png">
             <p class="experienceSentence2">Connectivity view, assess relationships</p>
           </div>
-      </div>
+  </div>
+        <!-- features -->
     </div>
-  <!-- features -->
-</div>
 
 <div class="statement featureMargins">User testing</div>
 
