Fixing formation of features one iPhone

--- a/tier5.html
+++ b/tier5.html
@@ -772,7 +772,7 @@ old code
         </div>
   </div>
 
-  <div class="realTimeAndNur2  col-xs-offset-1 col-xs-11 col-sm-offset-1 col-sm-5">
+  <div class="realTimeAndNur2 col-xs-12 col-sm-6">
   <!-- <div class="realTimeAndNur2 col-xs-offset-1 col-xs-11 col-sm-offset-0 col-sm-6  col-md-offset-1 col-md-5 "> -->
             <p class="experienceTitleIcon">Nurturing Connections</p>
             <div class="iconSentence">
