--- a/tier5.html
+++ b/tier5.html
@@ -777,11 +777,11 @@ old code
             <p class="experienceTitleIcon">Nurturing Connections</p>
             <div class="iconSentence">
             <img class="featureIcon" alt="RSS Icon" src="myimages/tier5/design/rss-icon.png">
-            <p class="experienceSentence2">Newsfeed to keep tabs on lead&#39;s activities</p>
+            <p class="experienceSentence2">Newsfeed, keep tabs on lead&#39;s activities</p>
           </div>
           <div class="iconSentence">
             <img class="featureIcon" alt="Sort Icon" src="myimages/tier5/design/search-icon.png">
-            <p class="experienceSentence2">Individual search, find a client&#39;s email now! </p>
+            <p class="experienceSentence2">Individual search, find client&#39;s email now</p>
           </div>
           <div class="iconSentence">
             <img class="featureIcon" alt="Connect Icon" src="myimages/tier5/design/connect-icon.png">
