Formatting Next UP

--- a/tier5.html
+++ b/tier5.html
@@ -738,7 +738,7 @@ old code
 
   </div>
   <div class="videoText heavyText">
-    <p >In order to fully invest our stakeholders in our strategy, we involved them in a &#34;design studio&#34; ideation process. We also provided them with daily updates and frequent Keynote presentations so they were always updated on our progress throughout the project. This strategy resulted in significant client buy-in and as a result a smooth running design process.
+    <p><b>In order to fully invest our stakeholders in our strategy,</b> we involved them in a &#34;design studio&#34; ideation process. We also provided them with daily updates and frequent Keynote presentations so they were always updated on our progress throughout the project. This strategy resulted in significant client buy-in and as a result a smooth running design process.
     </p>
   </div>
 
@@ -772,7 +772,7 @@ old code
         </div>
   </div>
 
-  <div class="realTimeAndNur2 col-xs-12 col-sm-6">
+  <div class="realTimeAndNur2 col-xs-12 col-sm-offset-1 col-sm-5">
   <!-- <div class="realTimeAndNur2 col-xs-offset-1 col-xs-11 col-sm-offset-0 col-sm-6  col-md-offset-1 col-md-5 "> -->
             <p class="experienceTitleIcon">Nurturing Connections</p>
             <div class="iconSentence">
@@ -791,7 +791,7 @@ old code
         <!-- features -->
     </div>
 
-<div class="statement featureMargins">User testing</div>
+<div class="statement statementOrange">User testing</div>
 
 <div class="testingCircleSec">
   <div class="userTestingRounds"><p >Three Rounds</p></div>
@@ -1090,7 +1090,7 @@ old code
 
 <!-- </div> -->
 
-<div class="statement">Next Steps &amp Roll Out Phases</div>
+<div class="statement statmentOrange">Next Steps &amp Roll Out Phases</div>
 
 <div class="stepsParent">
   <div class="stepsSec">
